[gd_scene load_steps=16 format=3 uid="uid://qchcd80grhdd"]

[ext_resource type="Texture2D" uid="uid://dfegite3ckv3i" path="res://assets/Fondos/Fondo_nivel1.png" id="1_5pyvm"]
[ext_resource type="Script" uid="uid://oebpkk1234mx" path="res://Niveles/camara.gd" id="2_3w2fp"]
[ext_resource type="Texture2D" uid="uid://ccqwe72bwas06" path="res://assets/PNG/bandera_fin.png" id="7_woffm"]
[ext_resource type="PackedScene" uid="uid://hye8jsw5usi7" path="res://Enemigos/boss.tscn" id="8_t1ebf"]
[ext_resource type="PackedScene" uid="uid://ctwnyuuwr4n3w" path="res://Personaje/personaje.tscn" id="9_xsgfo"]
[ext_resource type="PackedScene" uid="uid://bo1go553v221h" path="res://Enemigos/barril.tscn" id="10_g7m8v"]
[ext_resource type="Texture2D" uid="uid://dv1bulq6ftlvc" path="res://assets/PNG/tilemap.png" id="11_dyn1e"]
[ext_resource type="PackedScene" uid="uid://cbircd5r8ypbi" path="res://Suelos/platform.tscn" id="12_iq08n"]
[ext_resource type="PackedScene" uid="uid://gn83nnv4tr4e" path="res://Suelos/top.tscn" id="13_t3jp5"]
[ext_resource type="PackedScene" uid="uid://cawofxm1wdvnf" path="res://Ui/canvas_layer_ui.tscn" id="14_ny117"]
[ext_resource type="Script" uid="uid://bfa0eje8e08g7" path="res://Niveles/controlador.gd" id="15_hactn"]
[ext_resource type="AudioStream" uid="uid://bmv6e6nisjoeo" path="res://Musica_Sonidos/Musica/freemusicbg.com-8bit Dungeon Boss.mp3" id="16_5pyvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdkh7"]
size = Vector2(211.53546, 324.8335)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wu4mx"]
texture = ExtResource("11_dyn1e")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0/physics_layer_0/polygon_0/one_way = true
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
2:4/0/physics_layer_0/polygon_0/one_way = true
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
3:4/0/physics_layer_0/polygon_0/one_way = true
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0

[sub_resource type="TileSet" id="TileSet_0yfdw"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wu4mx")

[node name="Level1" type="Node2D"]

[node name="FondoNivel1" type="Sprite2D" parent="."]
position = Vector2(417.99997, 243)
scale = Vector2(2.405088, 2.126203)
texture = ExtResource("1_5pyvm")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("object_to_follow")]
script = ExtResource("2_3w2fp")
object_to_follow = NodePath("../Personaje")

[node name="BanderaFin" type="Sprite2D" parent="."]
position = Vector2(335, -221.30142)
scale = Vector2(0.28364012, 0.21079423)
texture = ExtResource("7_woffm")

[node name="Area2D" type="Area2D" parent="BanderaFin"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BanderaFin/Area2D"]
position = Vector2(0.00012207031, -67.53746)
scale = Vector2(0.9999999, 0.99999976)
shape = SubResource("RectangleShape2D_fdkh7")

[node name="Boss" parent="." instance=ExtResource("8_t1ebf")]
position = Vector2(105.99999, -473.99997)
rotation = 0.048966806

[node name="Personaje" parent="." instance=ExtResource("9_xsgfo")]
position = Vector2(-35.999992, 684)
rotation = -0.06923112
scale = Vector2(1.2828486, 1.3567125)
gravity = 560

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-112, 536)
scale = Vector2(2.3707695, 3.01113)
tile_set = SubResource("TileSet_0yfdw")
format = 2
layer_0/tile_data = PackedInt32Array(262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 327680, 0, 3, 262144, 65536, 0, 196608, 983040, 3, 131072, 983040, 3, 65536, 983040, 3, 0, 983040, 3, 393215, 917504, 3, 327679, 917504, 3, 262143, 917504, 3, 196607, 917504, 3, 131071, 917504, 3, 65535, 917504, 3, -1, 917504, 3, -65537, 983040, 3, -131073, 983040, 3, -196609, 983040, 3, -262145, 983040, 3, -327681, 983040, 3, -131072, 917504, 3, -262144, 917504, 3, -393216, 917504, 3, -327680, 917504, 3, -196608, 917504, 3, -65536, 983040, 3, 262165, 0, 0, 262166, 0, 0, 327681, 65536, 2, 327682, 65536, 2, 327683, 65536, 2, 327684, 65536, 2, 327685, 65536, 2, 327686, 65536, 2, 327687, 65536, 2, 327688, 65536, 2, 327689, 65536, 2, 327690, 65536, 2, 327691, 65536, 2, 327692, 65536, 2, 327693, 65536, 2, 327694, 65536, 2, 327695, 0, 3, 327696, 0, 3, 327697, 0, 2, 327698, 65536, 2, 327699, 65536, 2, 327700, 65536, 2, 327701, 65536, 2, 327702, 65536, 2, 327703, 65536, 2, 458751, 458752, 5, 393216, 524288, 5, 393217, 524288, 5, 393218, 524288, 5, 393219, 524288, 5, 393220, 524288, 5, 393221, 524288, 5, 393222, 524288, 5, 393223, 524288, 5, 393224, 524288, 5, 393225, 524288, 5, 393226, 524288, 5, 393227, 458752, 6, 393228, 524288, 5, 393229, 524288, 6, 393230, 524288, 5, 393231, 524288, 5, 393232, 524288, 5, 393233, 524288, 6, 393234, 524288, 5, 393235, 524288, 5, 393236, 589824, 6, 393237, 524288, 5, 393238, 524288, 5, 393239, 589824, 5, 393240, 524288, 5, 393241, 524288, 5, 327705, 65536, 2, 262168, 0, 0, 327704, 65536, 2, 262167, 0, 0, 262169, 0, 0, 327706, 65536, 2, 327707, 65536, 2, -589825, 983040, 3, -524289, 983040, 3, -458753, 983040, 3, -393217, 983040, 3, -655360, 917504, 3, -589824, 917504, 3, -524288, 917504, 3, -458752, 917504, 3, -655331, 917504, 3, -589795, 917504, 3, -262115, 917504, 3, -196579, 917504, 3, -131043, 917504, 3, -65507, 655360, 1610612741, 29, 524288, 1610612742, 65565, 589824, 1342177285, 131101, 524288, 1610612741, 196637, 458752, 1610612741, 262173, 65536, 0, -655330, 983040, 3, -589794, 983040, 3, -262114, 983040, 3, -196578, 983040, 3, -131042, 983040, 3, -65506, 917504, 3, 30, 917504, 3, 65566, 917504, 3, 131102, 917504, 3, 196638, 917504, 3, 262174, 917504, 3, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 327708, 0, 3, 327709, 0, 3, 393245, 524288, 5, 393246, 655360, 6, 393244, 524288, 5, 393242, 524288, 6, 393243, 524288, 5, 327710, 917504, 3, -655361, 983040, 3, -720896, 917504, 3, -720897, 983040, 3, -786432, 917504, 3, -786433, 983040, 3, -851968, 917504, 3, -851969, 983040, 3, -917504, 917504, 3, -917505, 983040, 3, -983040, 917504, 3, -983041, 983040, 3, -1048576, 917504, 3, -720867, 917504, 3, -720866, 983040, 3, -786403, 917504, 3, -786402, 983040, 3, -851939, 917504, 3, -851938, 983040, 3, -917475, 917504, 3, -917474, 983040, 3, -524259, 917504, 3, -458723, 917504, 3, -393187, 917504, 3, -327651, 917504, 3, -524258, 983040, 3, -458722, 983040, 3, -393186, 983040, 3, -327650, 983040, 3, -1179619, 917504, 3, -1114083, 917504, 3, -1048547, 917504, 3, -983011, 917504, 3, -1179618, 983040, 3, -1114082, 983040, 3, -1048546, 983040, 3, -983010, 983040, 3, -1114113, 983040, 3, -1048577, 983040, 3, -1179648, 917504, 3, -1114112, 917504, 3, -1179649, 983040, 3, -1245184, 917504, 3, -1245155, 917504, 3, -1245154, 983040, 3, -1245185, 65536, 4, -1310690, 65536, 4, -1310720, 0, 4, -1310691, 0, 4, -1048573, 0, 4, -1048567, 0, 4)

[node name="barril4" parent="." instance=ExtResource("10_g7m8v")]
position = Vector2(119, 196)

[node name="Suelos" type="Node2D" parent="."]

[node name="Platform2" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(589, 398.99994)
rotation = -0.23331791
scale = Vector2(1.2419262, 0.99999994)

[node name="Platform3" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(255.00003, 288.00003)
rotation = 0.120161325
scale = Vector2(0.88256603, 1.0969137)

[node name="Platform4" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(621, 171.99998)
rotation = -0.19140661
scale = Vector2(1.1009853, 1.0969137)

[node name="Top" parent="Suelos" instance=ExtResource("13_t3jp5")]
position = Vector2(97, -184.30148)
rotation = 0.07243612

[node name="Top2" parent="Suelos" instance=ExtResource("13_t3jp5")]
position = Vector2(341, -169.30148)
rotation = 0.053718116

[node name="Top3" parent="Suelos" instance=ExtResource("13_t3jp5")]
position = Vector2(571.00006, -151.30145)
rotation = 0.10949345

[node name="Platform5" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(454, 621)
rotation = 0.20237406
scale = Vector2(1.590818, 1)

[node name="Platform7" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(621.00006, -33.99999)
rotation = -0.17674291
scale = Vector2(0.8729751, 1.0969137)

[node name="Platform6" parent="Suelos" instance=ExtResource("12_iq08n")]
position = Vector2(208.00003, 80)
rotation = 0.21089092
scale = Vector2(0.8023782, 1.0969137)

[node name="CanvasLayer" parent="." instance=ExtResource("14_ny117")]

[node name="GameController" type="Node2D" parent="."]
script = ExtResource("15_hactn")

[node name="Timer" type="Timer" parent="GameController"]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_5pyvm")
autoplay = true

[node name="Barriles" type="Node2D" parent="."]

[node name="barril5" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(119, 196)

[node name="barril6" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(238, 392)

[node name="barril7" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(322, 555)

[node name="barril9" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(867, 265)

[node name="barril10" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(858, 73)

[node name="barril11" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(57, -2)

[node name="barril12" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(528, -62)

[node name="barril13" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(778, -113)

[node name="barril14" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(427, -199)

[node name="barril15" parent="Barriles" instance=ExtResource("10_g7m8v")]
position = Vector2(610, -175)

[connection signal="body_entered" from="BanderaFin/Area2D" to="Personaje" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="BanderaFin/Area2D" to="GameController" method="_on_area_2d_body_entered"]
[connection signal="player_hit" from="Personaje" to="GameController" method="_on_personaje_player_hit"]
[connection signal="player_health_updated" from="GameController" to="CanvasLayer" method="_on_game_controller_player_health_updated"]
[connection signal="time_updated" from="GameController" to="CanvasLayer" method="_on_game_controller_time_updated"]
[connection signal="timeout" from="GameController/Timer" to="GameController" method="_on_timer_timeout"]
